solution day 6 part 2